--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon index.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
@@ -16,8 +17,7 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^7.0.0",
-    "multer": "^1.4.4",
-    "nodemailer": "^7.0.12"
+    "multer": "^1.4.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
